toolchain/internal/core/analysis/testdata/errors/naming/annotation_not_camel.vdl
// @expect: E102

@Bad_Annotation
type User {
  id string
}
